--- a/20240202-harbor-catalog-info.yaml
+++ b/20240202-harbor-catalog-info.yaml
@@ -14,7 +14,7 @@ spec:
   type: openapi
   owner: group:default/team-devops
   lifecycle: experimental
-  system: isd-system
+  system: cbcpp-prod-container
   definition: |
     openapi: "2.0"
     info:
